[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "privacy-filter"
version = "0.1.0"
description = "Python bindings for privacy-filter.cpp — fast GGML PII/NER token classification"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Liferaft" }]
keywords = ["pii", "ner", "ggml", "privacy", "token-classification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/localai-org/privacy-filter.cpp"

[dependency-groups]
dev = ["pytest>=8"]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.21"
cmake.build-type = "Release"
wheel.packages = ["src/privacy_filter"]
# Build a single stable-ABI (abi3) wheel usable on CPython 3.12+.
wheel.py-api = "cp312"
# The compiled extension installs into the privacy_filter package (see CMake install rule).

[tool.scikit-build.cmake.define]
# Bindings are CPU-only for now; GPU variants are a future, separate build.
PF_VULKAN = "OFF"
PF_CUDA = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
# One stable-ABI wheel per platform (wheel.py-api=cp312 makes it abi3 → 3.12+).
build = "cp312-*"
# musllinux (Alpine) is not a target: upstream ner.h uses int32_t without
# <cstdint>, which only fails under musl's stricter libstdc++ headers.
skip = "*-musllinux*"
build-frontend = "build"
# Sanity-check each built wheel. Model-dependent tests skip without PF_TEST_MODEL.
test-requires = "pytest"
test-command = "pytest {project}/tests -q"

[tool.cibuildwheel.config-settings]
# Portable, distributable wheels: don't bake the build machine's CPU features
# (ggml defaults to -march=native, which would SIGILL on older CPUs). Uses a
# conservative baseline instead. Drop this for a private, known-hardware build.
"cmake.define.GGML_NATIVE" = "OFF"

[tool.cibuildwheel.macos.environment]
# arm64 minimum deployment target.
MACOSX_DEPLOYMENT_TARGET = "11.0"
